--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -57,7 +57,7 @@ set(SRC ${CMAKE_CURRENT_SOURCE_DIR}/../src)
 if ( JSONONLY )
 	FILE(GLOB JSON_SRC "${SRC}/json/*.cpp" "${SRC}/parser/*.cpp")
 	FILE(GLOB JSON_H "${SRC}/json/*.h" "${SRC}/parser/*.h")
-	FILE (GLOB PUBLICHEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "${SRC}/json/*.h" "${SRC}/parser/*.h")
+	FILE (GLOB PUBLICHEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "${SRC}/include/export.h" "${SRC}/json/*.h" "${SRC}/parser/*.h")
 else()
 	FILE(GLOB JSON_SRC "${SRC}/*/*.cpp"*)
 	FILE(GLOB JSON_H "${SRC}/*/*.h")
