--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -43,6 +43,7 @@ if(APPLE)
 		set (lib "STATIC")
 	else ()
 		message (STATUS "Generates Mac OS project- Use -DIOS=yes to change.")
+		set (CMAKE_C++_FLAGS -mmacosx-version-min=10.6)
 	endif ()
 endif(APPLE)
 
@@ -59,7 +60,7 @@ if ( JSONONLY )
 	FILE(GLOB JSON_H "${SRC}/json/*.h" "${SRC}/parser/*.h")
 	FILE (GLOB PUBLICHEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "${SRC}/include/export.h" "${SRC}/json/*.h" "${SRC}/parser/*.h")
 else()
-	FILE(GLOB JSON_SRC "${SRC}/*/*.cpp"*)
+	FILE(GLOB JSON_SRC "${SRC}/*/*.cpp")
 	FILE(GLOB JSON_H "${SRC}/*/*.h")
 	FILE (GLOB PUBLICHEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "${SRC}/*/*.h")
 	include_directories(${INCL} ${SRC}/json ${SRC}/osc ${SRC}/parser ${SRC}/include ${OSC_PATH})
