--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -43,7 +43,7 @@ if(APPLE)
 		set (lib "STATIC")
 	else ()
 		message (STATUS "Generates Mac OS project - Use -DIOS=yes to change.")
-		set (CMAKE_OSX_ARCHITECTURES "x86_64 i386")
+		set (CMAKE_OSX_ARCHITECTURES "x86_64")
 		set (CMAKE_OSX_DEPLOYMENT_TARGET 10.6)
 		set (CMAKE_C++_FLAGS -mmacosx-version-min=10.6)
 	endif ()
